--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.password=37552109
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 logging.level.tgb.btc=DEBUG
-logging.level.org.springframework.web=ERROR
+logging.level.org.springframework.web=INFO
 logging.file.name=rce.log
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.logback.rollingpolicy.max-file-size=50MB
