--- a/config/bot/modules.properties
+++ b/config/bot/modules.properties
@@ -2,5 +2,6 @@ calculator.type=INLINE_QUERY
 referral.type=STANDARD
 first.deal.promo.type=STANDARD
 anti.spam=NONE
+anti.spam.ignore.count.deals=1
 review.prise=DYNAMIC
 delivery.kind=STANDARD
